# speed-dreams-2

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.txt  Makefile  clobber.sh  cmake_install.cmake  config.h  credits.xml  log  robotgen  robotgen~  uninstall.cmake  xmlversion_loc.txt
bt_2004/: Makefile  README  bt_2004.cpp  bt_2004.def  bt_2004.dsp  bt_2004.xml  cardata.cpp  cardata.h  convert.sh  driver.cpp  driver.h  learn.cpp  learn.h  linalg.h  opponent.cpp  opponent.h  pit.cpp  spline.cpp  strategy.cpp  strategy.h
bt_2004/0/: Makefile
bt_2004/0/practice/: Makefile
bt_2004/0/qualifying/: Makefile
bt_2004/0/race/: Makefile
bt_2004/1/: Makefile
bt_2004/1/practice/: Makefile
bt_2004/1/qualifying/: Makefile  e-track-4.xml
bt_2004/1/race/: Makefile
cmake/: Find3rdPartyDependencies.cmake  Makefile  checks.cmake  config.h.cmake  config.h.in.cmake  customthirdparty.cmake  install.cmake  macros.cmake  options.cmake  packagemaker.cmake  robot.cmake  split_argn.cmake  thirdpartydeps.cmake
data/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/: Makefile  cmake_install.cmake
data/cars/categories/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/36GP/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/LS-GT1/: CMakeLists.txt  Makefile
data/cars/categories/LS-GT2/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/LS-P1/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/LS-P2/: CMakeLists.txt  Makefile
data/cars/categories/MP1/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/MP10/: CMakeLists.txt  Makefile
data/cars/categories/MP5/: CMakeLists.txt  Makefile
data/cars/categories/MPA1/: CMakeLists.txt  Makefile
data/cars/categories/Nascar/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/Preview/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/RS/: CMakeLists.txt  Makefile
data/cars/categories/Raid-T1/: CMakeLists.txt  Makefile
data/cars/categories/References/: CMakeLists.txt  Makefile
data/cars/categories/SuperCup/: CMakeLists.txt
data/cars/categories/Supercars/: CMakeLists.txt  Makefile  cmake_install.cmake
data/cars/categories/TRB1/: CMakeLists.txt  Makefile
data/cars/models/: CMakeLists.txt  Makefile  cmake_install.cmake
data/config/: Makefile  cmake_install.cmake  graph.xml  logging.xml  raceengine.xml
data/config/raceman/: Makefile  championship-mpa1.xml  championship.xml  cmake_install.cmake
data/data/: CMakeLists.txt  Makefile  cmake_install.cmake
data/data/fonts/: CMakeLists.txt  Makefile
data/data/icons/: Makefile
data/data/img/: CMakeCache.txt  Makefile  cmake_install.cmake
data/data/menu/: Makefile  cmake_install.cmake  soundconfigmenu.xml  stopracemenu.xml
data/data/music/: CMakeLists.txt  Makefile  cmake_install.cmake
data/data/objects/: Makefile  cmake_install.cmake
data/data/sky/: CMakeLists.txt  Makefile  cmake_install.cmake  stars.txt
data/data/sound/: Makefile  cmake_install.cmake
data/data/textures/: Makefile  cmake_install.cmake
data/data/tracks/: Makefile
data/tracks/: Makefile  cmake_install.cmake
data/tracks/circuit/: Makefile  cmake_install.cmake
data/tracks/development/: CMakeLists.txt  Makefile  cmake_install.cmake
data/tracks/dirt/: Makefile  cmake_install.cmake
data/tracks/gprix/: CMakeLists.txt  Makefile  cmake_install.cmake
data/tracks/karting/: CMakeLists.txt  Makefile  cmake_install.cmake
data/tracks/road/: CMakeLists.txt  Makefile  cmake_install.cmake
data/tracks/speedway/: CMakeLists.txt  Makefile  cmake_install.cmake
packaging/sources/: build.sh  sd-src-base.lst  sd-src-hq-cars-and-tracks.lst  sd-src-more-hq-cars-and-tracks.lst  sd-src-wip-cars-and-tracks.lst
packaging/windows/: readme_for_user.txt  speed-dreams-base.nsi  speed-dreams-hq-cars-and-tracks.nsi  speed-dreams-more-hq-cars-and-tracks.nsi  speed-dreams-unmaintained.nsi  speed-dreams-wip-cars-and-tracks.nsi  speed-dreams.nsh
src/: Makefile  cmake_install.cmake
src/drivers/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
src/drivers/FrameworkRobot/: CMakeLists.txt  Makefile  cmake_install.cmake
src/drivers/K1999/: CMakeLists.txt  K1999.xml
src/drivers/bt/: CMakeLists.txt  Makefile  bt.def  bt.xml
src/interfaces/: Makefile  car.h  cmake_install.cmake  graphic.h  playerpref.h  raceman.h  robot.h
src/libs/: Makefile  cmake_install.cmake
src/libs/raceengine/: CMakeLists.txt  racecars.cpp  raceengine.cpp  raceengine.h  raceengine.xml  raceinit.cpp  racemain.cpp  racemain.h  racemessage.cpp  racenetwork.cpp  raceresults.cpp  raceresults.xsl  racesituation.cpp  racestate.cpp  racetrack.cpp  raceupdate.cpp  raceupdate.h
src/libs/tgf/: Makefile  (+12 more)
src/main/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.srto.cpp  speed-dreams-2
src/modules/: Makefile  cmake_install.cmake
src/modules/graphic/osggraph/: AccGeode.cpp  AccGeode.h  CMakeLists.txt  OsgAtomic.h  OsgBackground.cpp  OsgBrake.cpp  OsgCamera.cpp  OsgCamera.h  OsgCar.cpp  OsgCar.h  OsgDome.cpp  OsgDome.h  OsgGraph.cpp  OsgLoader.cpp  OsgMain.cpp  OsgMain.h  OsgMath.cpp  OsgMath.h  OsgMoon.cpp  OsgMoon.h  OsgRender.cpp  OsgRender.h  OsgScenery.cpp  OsgScenery.h  OsgScreens.cpp  OsgScreens.h  OsgSky.cpp  OsgSky.h  OsgSphere.cpp  OsgStars.cpp  OsgStars.h  OsgSun.cpp  OsgSun.h  OsgView.cpp  OsgView.h  OsgWheel.cpp  ReaderWriterACC.cpp  ReaderWriterACC.h
src/modules/simu/simuv2.1/SOLID-2.0/src/: CMakeLists.txt  Makefile
src/modules/telemetry/: CMakeLists.txt  Makefile  cmake_install.cmake  telemetry.cpp  telemetryitf.cpp  tlm.h
src/modules/track/: CMakeLists.txt  Makefile  cmake_install.cmake  track.cpp  track0.cpp  track1.cpp  track2.cpp  track3.cpp  track4.cpp  trackinc.h  trackitf.cpp  trackitf.h  trackutil.cpp
src/raceman/: CMakeLists.txt  championship-supercars.xml
src/tools/: Makefile  cmake_install.cmake
src/tools/xmlversion/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  xmlversion
(+1481 files in other folders)
