INCLUDE(../../cmake/macros.cmake)

ADD_SUBDIRECTORY(fonts)
ADD_SUBDIRECTORY(icons)
ADD_SUBDIRECTORY(img)
ADD_SUBDIRECTORY(menu)
ADD_SUBDIRECTORY(objects)
ADD_SUBDIRECTORY(sound)
ADD_SUBDIRECTORY(sky)
ADD_SUBDIRECTORY(textures)
ADD_SUBDIRECTORY(tracks)
IF(OPTION_MENU_MUSIC)
  ADD_SUBDIRECTORY(music)
ENDIF(OPTION_MENU_MUSIC)

